9/30/10 fix: current indicator should point counterclockwise for +dV, clockwise for -dV
9/30/10 tweak tick marks on Plate Charge slider, make thumb line up precisely with zero
9/29/10 remove debug value node from PlateChargeControlNode, this info is shown in ModelValuesPanel
9/29/10 when "Remove Wires" is pressed, set Plate Charge control to the plate charge with the battery connected
9/29/10 change range of Plate Charge slider to go from "lots (+)" to "lots (-)"
# 0.00.17 (44526) Sep 29, 2010
9/29/10 demo first pass at grid layout for plate charges
9/29/10 layout charges in a grid using algorithm from CCK's CapacitorNode (lines 270-230)
9/29/10 handle partially-inserted dielectric for Plate Charges view
9/29/10 make battery have no affect when disconnected
9/29/10 fixed another plate charge polarity issue
# 0.00.16 (44502) Sep 29, 2010
9/29/10 another dev version to demo plate charge, fixed polarity issues
9/28/10 create infrastructure for dielectric charge views, wire up to control panel
9/28/10 pull PlateChargeNode out of PlateNode, bad idea to merge them
9/28/10 merge PlateChargeNode into PlateNode
# 0.00.15 (44492) Sep 28, 2010
9/28/10 dev version to demonstrate problems with plate charge representation
9/28/10 keep charges fully inside the plate by taking the charge size into account
9/28/10 reduce size of charges to match Noah's mock up
9/28/10 fixed plate area drag handle
9/28/10 fixed plate separation drag handle
9/28/10 a rough version of showing plate charges, to demonstrate that this design does not scale well
9/28/10 converted everything to use 3D MVT to create perspective (big change, broke 2 drag handles) [44484]
9/28/10 first attempt at adding 3D model to 2D view transform to MVT (untested)
9/28/10 straighten out some things in BoxNode related to 3D perspective
9/28/10 reset the battery slider on Reset All
9/28/10 ensure that all meters remain in the play area when the main window is resized
9/28/10 hook up "Plate Charges" check box