@@ -1,3 +1,4 @@
+9/30/10 TestPlateChargeLayout, test harness for plate charge layout
 9/30/10 fix: current indicator should point counterclockwise for +dV, clockwise for -dV
 9/30/10 tweak tick marks on Plate Charge slider, make thumb line up precisely with zero
 9/29/10 remove debug value node from PlateChargeControlNode, this info is shown in ModelValuesPanel
